--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,8 @@ name: Build and Push Microservices
 
 on:
   push:
-    branches: [main] # Se ejecuta al pushear en main
+    branches: [main]
+  workflow_dispatch:  # Permite ejecutar el workflow manualmente
 
 jobs:
   build-and-push:
@@ -20,37 +21,40 @@ jobs:
           - microservices/voucher-ms
 
     steps:
-      - name: Checkout launcher repo with submodules
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-          fetch-depth: 0
+    - name: Checkout launcher repo with submodules
+      uses: actions/checkout@v4
+      with:
+        submodules: recursive
+        fetch-depth: 0
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Check if submodule changed
-        id: check_changes
-        run: |
-          if git diff --name-only HEAD^ HEAD | grep ${{ matrix.service }}; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-          else
-            echo "changed=false" >> $GITHUB_OUTPUT
-          fi
+    - name: Print current service
+      run: echo "Checking service: ${{ matrix.service }}"
 
-      - name: Build and Push Docker Image
-        if: steps.check_changes.outputs.changed == 'true'
-        uses: docker/build-push-action@v5
-        with:
-          context: ${{ matrix.service }}
-          file: ${{ matrix.service }}/dockerfile.prod
-          push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:${{ github.sha }}
+    - name: Check if submodule changed
+      id: check_changes
+      run: |
+        if git diff --name-only HEAD^ HEAD | grep ${{ matrix.service }}; then
+          echo "changed=true" >> $GITHUB_OUTPUT
+        else
+          echo "changed=false" >> $GITHUB_OUTPUT
+        fi
+
+    - name: Build and Push Docker Image
+      if: steps.check_changes.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
+      uses: docker/build-push-action@v5
+      with:
+        context: ${{ matrix.service }}
+        file: ${{ matrix.service }}/dockerfile.prod
+        push: true
+        tags: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:latest
+          ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:${{ github.sha }}
