--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -3,7 +3,7 @@ name: Build and Push Microservices
 on:
   push:
     branches: [main]
-  workflow_dispatch:  # Permite ejecutar el workflow manualmente
+  workflow_dispatch:
 
 jobs:
   build-and-push:
