--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,12 +1,10 @@
-name: Build and Push Microservices
+name: Force Build and Push All Microservices
 
 on:
-  push:
-    branches: [main]
   workflow_dispatch:
 
 jobs:
-  build-and-push:
+  build-and-push-all:
     runs-on: ubuntu-latest
 
     strategy:
@@ -21,41 +19,30 @@ jobs:
           - microservices/voucher-ms
 
     steps:
-      - name: Checkout launcher repo with submodules
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-          fetch-depth: 0
+    - name: Checkout launcher repo with submodules
+      uses: actions/checkout@v4
+      with:
+        submodules: recursive
+        fetch-depth: 0
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Print current service
-        run: |
-          echo "Checking service: ${{ matrix.service }}"
+    - name: Print current service
+      run: echo "Building and pushing: ${{ matrix.service }}"
 
-      - name: Check if submodule changed
-        id: check_changes
-        run: |
-          if git diff --name-only HEAD^ HEAD | grep ${{ matrix.service }}; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-          else
-            echo "changed=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Build and Push Docker Image
-        if: steps.check_changes.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
-        uses: docker/build-push-action@v5
-        with:
-          context: ${{ matrix.service }}
-          file: ${{ matrix.service }}/dockerfile.prod
-          push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:${{ github.sha }}
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v5
+      with:
+        context: ${{ matrix.service }}
+        file: ${{ matrix.service }}/dockerfile.prod
+        push: true
+        tags: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:latest
+          ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:${{ github.sha }}
