--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -52,7 +52,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./${{ matrix.path }}
-          file: ./${{ matrix.path }}/dockerfile.prod
+          file: ./${{ matrix.path }}/dockerfile
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}:latest
