--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -18,14 +18,14 @@ jobs:
             path: frontend
           - name: auth-ms
             path: microservices/auth-ms
-          # - name: branches-ms
-          #   path: microservices/branches-ms
-          # - name: contacts-ms
-          #   path: microservices/contacts-ms
-          # - name: products-ms
-          #   path: microservices/products-ms
-          # - name: voucher-ms
-          #   path: microservices/voucher-ms
+          - name: branches-ms
+            path: microservices/branches-ms
+          - name: contacts-ms
+            path: microservices/contacts-ms
+          - name: products-ms
+            path: microservices/products-ms
+          - name: voucher-ms
+            path: microservices/voucher-ms
 
     steps:
       - name: Checkout launcher repo with submodules
