--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Add server to known_hosts
         run: |
-          ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -p ${{ secrets.SERVER_PORT }} -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
       - name: Create remote folder & upload files
         run: |
