--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -2,8 +2,7 @@ name: Deploy to Cloud Server
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
     paths:
       - docker-compose.prod.yml
       - .env
