--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -36,6 +36,6 @@ jobs:
         run: |
           ssh -p ${{ secrets.SERVER_PORT }} ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
             cd /root/bosque
-            docker compose -f docker-compose.prod.yml config || { echo "❌ Compose config failed"; exit 1; }
+            docker compose -f docker-compose.prod.yml pull || { echo "❌ Compose pull failed"; exit 1; }
             docker compose -f docker-compose.prod.yml up -d || { echo "❌ Compose up failed"; exit 1; }
           EOF
