build en el archivo de build-push.yml

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           ssh -p ${{ secrets.SERVER_PORT }} ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
             cd /root/bosque
+            docker compose -f docker-compose.prod.yml build 
             docker compose -f docker-compose.prod.yml up -d --pull always || { echo "❌ Compose pull failed"; exit 1; }
             docker compose -f docker-compose.prod.yml up -d --force-recreate
           EOF
