--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -160,6 +160,15 @@ services:
     restart: unless-stopped
     networks:
       - laucher-app-dev
+  app-mobile:
+    image: app-mobile
+    build:
+      context: G:\BrownSystem\bosque-fr
+      dockerfile: dockerfile.prod
+    ports:
+      - "5174:5174"
+    networks:
+      - laucher-app-dev
 
   frontend:
     image: frontend
