--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -124,8 +124,8 @@ services:
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD_VOUCHER_ENV}
       - POSTGRES_DB=${POSTGRES_DB_VOUCHER_ENV}
-    # ports:
-    #   - "5437:5432"
+    ports:
+      - "5437:5432"
     volumes:
       - voucher-db-data:/var/lib/postgresql/data
     restart: always
