--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,4 +1,4 @@
-name: Deploy to Cloud Server with SSH
+name: Build & Deploy to Cloud Server
 
 on:
   push:
@@ -6,7 +6,56 @@ on:
   workflow_dispatch:
 
 jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        service:
+          - name: app-mobile
+            path: app-mobile
+          - name: frontend
+            path: frontend
+          - name: client-gateway
+            path: client-gateway
+          - name: auth-ms
+            path: microservices/auth-ms
+          - name: branches-ms
+            path: microservices/branches-ms
+          - name: contacts-ms
+            path: microservices/contacts-ms
+          - name: products-ms
+            path: microservices/products-ms
+          - name: voucher-ms
+            path: microservices/voucher-ms
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Validate Dockerfile
+        run: |
+          if [ ! -f "${{ matrix.service.path }}/dockerfile.prod" ]; then
+            echo "❌ Missing dockerfile.prod in ${{ matrix.service.path }}"
+            exit 1
+          fi
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build & Push ${{ matrix.service.name }}
+        uses: docker/build-push-action@v4
+        with:
+          context: ./${{ matrix.service.path }}
+          file: ./${{ matrix.service.path }}/dockerfile.prod
+          push: true
+          tags: |
+            noinblake/${{ matrix.service.name }}:v1
+
   deploy:
+    needs: build-and-push
     runs-on: ubuntu-latest
 
     steps:
