--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -164,27 +164,27 @@ services:
     networks:
       - laucher-app-dev
 
-  app-mobile:
-    image: app-mobile
-    build:
-      context: G:\BrownSystem\bosque-fr
-      dockerfile: dockerfile.prod
-    ports:
-      - "5174:5174"
-    networks:
-      - laucher-app-dev
+  # app-mobile:
+  #   image: app-mobile
+  #   build:
+  #     context: G:\BrownSystem\bosque-fr
+  #     dockerfile: dockerfile.prod
+  #   ports:
+  #     - "5174:5174"
+  #   networks:
+  #     - laucher-app-dev
 
-  frontend:
-    image: frontend
-    build:
-      context: ./frontend
-      dockerfile: dockerfile.prod
-    ports:
-      - "5173:5173" # o 3006:80 si usás otro puerto
-    networks:
-      - laucher-app-dev
-    depends_on:
-      - client-gateway
+  # frontend:
+  #   image: frontend
+  #   build:
+  #     context: ./frontend
+  #     dockerfile: dockerfile.prod
+  #   ports:
+  #     - "5173:5173" # o 3006:80 si usás otro puerto
+  #   networks:
+  #     - laucher-app-dev
+  #   depends_on:
+  #     - client-gateway
 
 networks:
   laucher-app-dev:
