--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -27,6 +27,7 @@ jobs:
             path: microservices/products-ms
           - name: voucher-ms
             path: microservices/voucher-ms
+      max-parallel: 8
 
     steps:
       - name: Checkout repo with submodules
@@ -35,15 +36,15 @@ jobs:
           submodules: recursive
           fetch-depth: 0
 
-      - name: Ensure submodules are up to date
-        run: git submodule update --init --recursive
-
       - name: Validate Dockerfile
         run: |
           if [ ! -f "${{ matrix.service.path }}/dockerfile.prod" ]; then
             echo "❌ Missing dockerfile.prod in ${{ matrix.service.path }}"
             exit 1
           fi
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -59,20 +60,18 @@ jobs:
           push: true
           tags: |
             noinblake/${{ matrix.service.name }}:v1
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo with submodules
+      - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          submodules: recursive
           fetch-depth: 0
-
-      - name: Ensure submodules are up to date
-        run: git submodule update --init --recursive
 
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.9.0
@@ -82,7 +81,7 @@ jobs:
       - name: Add server to known_hosts
         run: ssh-keyscan -p ${{ secrets.SERVER_PORT }} -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Create remote folder & upload files
+      - name: Upload config files
         run: |
           ssh -p ${{ secrets.SERVER_PORT }} ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "mkdir -p /root/bosque"
           scp -P ${{ secrets.SERVER_PORT }} docker-compose.prod.yml .env ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/root/bosque/
@@ -97,6 +96,6 @@ jobs:
         run: |
           ssh -p ${{ secrets.SERVER_PORT }} ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
             cd /root/bosque
-            docker compose -f docker-compose.prod.yml pull || { echo "❌ Compose pull failed"; exit 1; }
+            docker compose -f docker-compose.prod.yml pull --parallel || { echo "❌ Compose pull failed"; exit 1; }
             docker compose -f docker-compose.prod.yml up -d || { echo "❌ Compose up failed"; exit 1; }
           EOF
