--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,30 +149,30 @@ services:
     networks:
       - laucher-app-dev
 
-  # voucher-ms:
-  #   image: voucher-ms
-  #   build:
-  #     context: ./microservices/voucher-ms
-  #     dockerfile: dockerfile.prod
-  #   environment:
-  #     - PORT=3006
-  #     - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD_VOUCHER_ENV}@voucher-db:5432/${POSTGRES_DB_VOUCHER_ENV}?schema=public&sslmode=disable
-  #     - NATS_SERVERS=nats://nats-servers:4222
-  #   depends_on:
-  #     - voucher-db
-  #   restart: unless-stopped
-  #   networks:
-  #     - laucher-app-dev
+  voucher-ms:
+    image: voucher-ms
+    build:
+      context: ./microservices/voucher-ms
+      dockerfile: dockerfile.prod
+    environment:
+      - PORT=3006
+      - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD_VOUCHER_ENV}@voucher-db:5432/${POSTGRES_DB_VOUCHER_ENV}?schema=public&sslmode=disable
+      - NATS_SERVERS=nats://nats-servers:4222
+    depends_on:
+      - voucher-db
+    restart: unless-stopped
+    networks:
+      - laucher-app-dev
 
-  # app-mobile:
-  #   image: app-mobile
-  #   build:
-  #     context: G:\BrownSystem\bosque-fr
-  #     dockerfile: dockerfile.prod
-  #   ports:
-  #     - "5174:5174"
-  #   networks:
-  #     - laucher-app-dev
+  app-mobile:
+    image: app-mobile
+    build:
+      context: G:\BrownSystem\bosque-fr
+      dockerfile: dockerfile.prod
+    ports:
+      - "5174:5174"
+    networks:
+      - laucher-app-dev
 
   frontend:
     image: frontend
