--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,21 +7,21 @@ services:
       - laucher-app-dev
     restart: always
 
-  client-gateway:
-    image: client-gateway
-    build:
-      context: ./client-gateway
-      dockerfile: dockerfile.prod
-    ports:
-      - "4000:4000"
-    environment:
-      - PORT=4000
-      - NATS_SERVERS=nats://nats-servers:4222
-    depends_on:
-      - nats-servers
-    restart: unless-stopped
-    networks:
-      - laucher-app-dev
+  # client-gateway:
+  #   image: client-gateway
+  #   build:
+  #     context: ./client-gateway
+  #     dockerfile: dockerfile.prod
+  #   ports:
+  #     - "4000:4000"
+  #   environment:
+  #     - PORT=4000
+  #     - NATS_SERVERS=nats://nats-servers:4222
+  #   depends_on:
+  #     - nats-servers
+  #   restart: unless-stopped
+  #   networks:
+  #     - laucher-app-dev
 
   auth-db:
     image: postgres:15-alpine
@@ -93,20 +93,20 @@ services:
     networks:
       - laucher-app-dev
 
-  contacts-ms:
-    image: contacts-ms
-    build:
-      context: ./microservices/contacts-ms
-      dockerfile: dockerfile.prod
-    environment:
-      - PORT=3005
-      - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD_CONTACTS_ENV}@contacts-db:5432/${POSTGRES_DB_CONTACTS_ENV}?schema=public&sslmode=disable
-      - NATS_SERVERS=nats://nats-servers:4222
-    depends_on:
-      - contacts-db
-    restart: unless-stopped
-    networks:
-      - laucher-app-dev
+  # contacts-ms:
+  #   image: contacts-ms
+  #   build:
+  #     context: ./microservices/contacts-ms
+  #     dockerfile: dockerfile.prod
+  #   environment:
+  #     - PORT=3005
+  #     - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD_CONTACTS_ENV}@contacts-db:5432/${POSTGRES_DB_CONTACTS_ENV}?schema=public&sslmode=disable
+  #     - NATS_SERVERS=nats://nats-servers:4222
+  #   depends_on:
+  #     - contacts-db
+  #   restart: unless-stopped
+  #   networks:
+  #     - laucher-app-dev
 
   branches-db:
     image: postgres:15-alpine
@@ -164,27 +164,27 @@ services:
     networks:
       - laucher-app-dev
 
-  app-mobile:
-    image: app-mobile
-    build:
-      context: G:\BrownSystem\bosque-fr
-      dockerfile: dockerfile.prod
-    ports:
-      - "5174:5174"
-    networks:
-      - laucher-app-dev
+  # app-mobile:
+  #   image: app-mobile
+  #   build:
+  #     context: G:\BrownSystem\bosque-fr
+  #     dockerfile: dockerfile.prod
+  #   ports:
+  #     - "5174:5174"
+  #   networks:
+  #     - laucher-app-dev
 
-  frontend:
-    image: frontend
-    build:
-      context: ./frontend
-      dockerfile: dockerfile.prod
-    ports:
-      - "5173:5173" # o 3006:80 si usás otro puerto
-    networks:
-      - laucher-app-dev
-    depends_on:
-      - client-gateway
+  # frontend:
+  #   image: frontend
+  #   build:
+  #     context: ./frontend
+  #     dockerfile: dockerfile.prod
+  #   ports:
+  #     - "5173:5173" # o 3006:80 si usás otro puerto
+  #   networks:
+  #     - laucher-app-dev
+  #   depends_on:
+  #     - client-gateway
 
 networks:
   laucher-app-dev:
