--- a/.env
+++ b/.env
@@ -27,6 +27,12 @@ POSTGRES_USER_VOUCHER_ENV=postgres_vouchers
 POSTGRES_PASSWORD_VOUCHER_ENV=postgres
 POSTGRES_DB_VOUCHER_ENV=vouchersdb
 
+
+POSTGRES_USER_BOXDAILY_ENV=postgres_boxdaily
+# POSTGRES_PASSWORD_VOUCHER_ENV=336366!Vouchers
+POSTGRES_PASSWORD_BOXDAILY_ENV=postgres
+POSTGRES_DB_BOXDAILY_ENV=boxdailydb
+
 JWT_SECRET="secret"
 
 
