--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,6 +108,34 @@ services:
     networks:
       - laucher-app-dev
 
+  boxdaily-db:
+    image: postgres:15-alpine
+    ports:
+      - "5442:5432"
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD_BOXDAILY_ENV}
+      - POSTGRES_DB=${POSTGRES_DB_BOXDAILY_ENV}
+    volumes:
+      - boxdaily-db-data-dev:/var/lib/postgresql/data
+    restart: always
+    networks:
+      - laucher-app-dev
+
+  boxdaily-ms:
+    image: boxdaily-ms
+    build:
+      context: ./microservices/boxdaily-ms
+      dockerfile: dockerfile.prod
+    environment:
+      - PORT=3007
+      - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD_BOXDAILY_ENV}@boxdaily-db:5432/${POSTGRES_DB_BOXDAILY_ENV}?schema=public&sslmode=disable
+      - NATS_SERVERS=nats://nats-servers:4222
+    depends_on:
+      - boxdaily-db
+    restart: unless-stopped
+    networks:
+      - laucher-app-dev
+
   branches-db:
     image: postgres:15-alpine
     ports:
@@ -149,20 +177,20 @@ services:
     networks:
       - laucher-app-dev
 
-  # voucher-ms:
-  #   image: voucher-ms
-  #   build:
-  #     context: ./microservices/voucher-ms
-  #     dockerfile: dockerfile.prod
-  #   environment:
-  #     - PORT=3006
-  #     - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD_VOUCHER_ENV}@voucher-db:5432/${POSTGRES_DB_VOUCHER_ENV}?schema=public&sslmode=disable
-  #     - NATS_SERVERS=nats://nats-servers:4222
-  #   depends_on:
-  #     - voucher-db
-  #   restart: unless-stopped
-  #   networks:
-  #     - laucher-app-dev
+  voucher-ms:
+    image: voucher-ms
+    build:
+      context: ./microservices/voucher-ms
+      dockerfile: dockerfile.prod
+    environment:
+      - PORT=3006
+      - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD_VOUCHER_ENV}@voucher-db:5432/${POSTGRES_DB_VOUCHER_ENV}?schema=public&sslmode=disable
+      - NATS_SERVERS=nats://nats-servers:4222
+    depends_on:
+      - voucher-db
+    restart: unless-stopped
+    networks:
+      - laucher-app-dev
 
   # app-mobile:
   #   image: app-mobile
@@ -196,3 +224,4 @@ volumes:
   contacts-db-data-dev:
   branches-db-data-dev:
   voucher-db-data-dev:
+  boxdaily-db-data-dev:
