--- a/.env
+++ b/.env
@@ -33,6 +33,6 @@ POSTGRES_USER_BOXDAILY_ENV=postgres_boxdaily
 POSTGRES_PASSWORD_BOXDAILY_ENV=postgres
 POSTGRES_DB_BOXDAILY_ENV=boxdailydb
 
-JWT_SECRET="secret"
+JWT_SECRET="TRES56D4TRES56D4TRES56D4TRES56D4TRES56D4"
 
 
